--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gemini-image-mcp",
-  "version": "1.0.0",
-  "description": "MCP server for generating images with Google Gemini",
+  "version": "2.0.0",
+  "description": "MCP server for generating and editing images with Google Gemini for web development",
   "type": "module",
   "main": "dist/server.js",
   "scripts": {
